<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item android:id="@+id/edit_menu_save"
        android:icon="@drawable/outline_save_24px"
        app:showAsAction="always"
        android:orderInCategory="0"
        android:title="@string/edit_menu_save"
        android:contentDescription="@string/edit_menu_save_a11y"/>
    <item android:id="@+id/edit_menu_search"
        android:icon="@drawable/outline_search_24"
        app:showAsAction="ifRoom"
        android:orderInCategory="1"
        android:title="@string/menu_search"
        android:contentDescription="@string/menu_search_a11y" />
    <item android:id="@+id/edit_menu_preview"
        app:showAsAction="never"
        android:orderInCategory="2"
        android:title="@string/edit_menu_preview"/>
    <item android:id="@+id/edit_menu_help"
        app:showAsAction="never"
        android:orderInCategory="3"
        android:title="@string/edit_menu_help" />
    <item android:id="@+id/edit_menu_close"
        app:showAsAction="never"
        android:orderInCategory="4"
        android:title="@string/menu_close"/>

</menu>