<android.support.constraint.ConstraintLayout android:id="@+id/images_sheet"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="@dimen/margin_24dp"
    app:layout_constraintTop_toBottomOf="@+id/peek_container"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">


    <TextView
        android:id="@+id/sheet_image_pick"
        style="@style/text.sheetListText"
        android:text="@string/sheet_pick_image"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/sheet_image_upload"
        style="@style/text.sheetListText"
        android:text="@string/sheet_upload_image"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/sheet_image_pick" />

    <TextView
        android:id="@+id/sheet_image_template"
        style="@style/text.sheetListText"
        android:text="@string/sheet_template"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/sheet_image_upload" />

</android.support.constraint.ConstraintLayout>
