<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:cardBackgroundColor="@color/primaryColor"
    app:cardElevation="@dimen/cardview_default_elevation">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/primaryLightColor"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/dialog_photo_preview"
            android:layout_width="match_parent"
            android:layout_height="250dp"
            android:layout_marginEnd="@dimen/margin_4dp"
            android:layout_marginStart="@dimen/margin_4dp"
            android:layout_marginTop="@dimen/margin_4dp"
            android:contentDescription="@string/dialog_photo_a11y"
            android:scaleType="centerCrop"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:src="@drawable/place_cage" />

        <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:elevation="@dimen/margin_4dp"
            android:background="@color/primaryColor">

            <EditText
                android:id="@+id/dialog_upload_title"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:layout_marginTop="@dimen/margin_4dp"
                android:backgroundTint="@color/secondaryColor"
                android:hint="@string/dialog_et_hint"
                android:textColor="@color/primaryTextColor"
                android:inputType="text|textCapSentences"
                android:textColorHint="@color/primaryTextColorFaded"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"/>

            <Button
                android:id="@+id/dialog_upload_button"
                style="@style/Base.Widget.AppCompat.Button.Borderless.Colored"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/margin_8dp"
                android:layout_marginBottom="@dimen/margin_8dp"
                android:layout_marginTop="@dimen/margin_24dp"
                android:text="@string/dialog_upload"
                android:textColor="@color/secondaryColor"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/dialog_upload_title" />

            <Button
                android:id="@+id/dialog_cancel_button"
                style="@style/Base.Widget.AppCompat.Button.Borderless.Colored"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:text="@string/cancel"
                android:textColor="@color/secondaryColor"
                app:layout_constraintBottom_toTopOf="@+id/dialog_upload_button"
                app:layout_constraintEnd_toStartOf="@+id/dialog_upload_button"
                app:layout_constraintTop_toBottomOf="@+id/dialog_upload_button" />
        </android.support.constraint.ConstraintLayout>
    </LinearLayout>
</android.support.v7.widget.CardView>