<?xml version="1.0" encoding="utf-8"?>

<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:behavior_hideable="false"
    app:behavior_peekHeight="64dp"
    app:layout_behavior="@string/bottom_sheet_behavior"
    tools:showIn="@layout/activity_main">

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardBackgroundColor="@color/backgroundColorMain"
        app:cardCornerRadius="0dp"
        app:cardElevation="@dimen/cardview_default_elevation">

        <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:id="@+id/peek_container"
                android:layout_width="match_parent"
                android:layout_height="@dimen/button_area_size"
                android:animateLayoutChanges="true"
                android:orientation="horizontal">

                <android.support.constraint.ConstraintLayout
                    android:id="@+id/peek_row"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/primaryDarkColor"
                    tools:visibility="visible">

                    <ImageView
                        android:id="@+id/peek_lists"
                        android:layout_width="@dimen/button_area_size"
                        android:layout_height="@dimen/button_area_size"
                        android:layout_marginStart="@dimen/margin_16dp"
                        android:contentDescription="@string/sheet_list_a11y"
                        android:padding="@dimen/button_icon_padding"
                        android:src="@drawable/outline_format_list_numbered_24px"
                        android:tint="@color/secondaryColor"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toStartOf="@+id/peek_headers"
                        app:layout_constraintHorizontal_chainStyle="spread_inside"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <ImageView
                        android:id="@+id/peek_headers"
                        android:layout_width="@dimen/button_area_size"
                        android:layout_height="@dimen/button_area_size"
                        android:contentDescription="@string/sheet_headers_a11y"
                        android:padding="@dimen/button_icon_padding"
                        android:src="@drawable/outline_format_size_24px"
                        android:tint="@color/secondaryColor"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toStartOf="@+id/peek_links"
                        app:layout_constraintStart_toEndOf="@+id/peek_lists"
                        app:layout_constraintTop_toTopOf="parent" />

                    <ImageView
                        android:id="@+id/peek_links"
                        android:layout_width="@dimen/button_area_size"
                        android:layout_height="@dimen/button_area_size"
                        android:contentDescription="@string/sheet_link_a11y"
                        android:padding="@dimen/button_icon_padding"
                        android:src="@drawable/outline_link_24px"
                        android:tint="@color/secondaryColor"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toStartOf="@+id/peek_image"
                        app:layout_constraintStart_toEndOf="@+id/peek_headers"
                        app:layout_constraintTop_toTopOf="parent" />

                    <ImageView
                        android:id="@+id/peek_image"
                        android:layout_width="@dimen/button_area_size"
                        android:layout_height="@dimen/button_area_size"
                        android:layout_marginEnd="@dimen/margin_16dp"
                        android:contentDescription="@string/sheet_image_a11y"
                        android:padding="@dimen/button_icon_padding"
                        android:src="@drawable/outline_image_24"
                        android:tint="@color/secondaryColor"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toEndOf="@+id/peek_links"
                        app:layout_constraintTop_toTopOf="parent" />

                </android.support.constraint.ConstraintLayout>

                <android.support.constraint.ConstraintLayout
                    android:id="@+id/button_row"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/button_area_size"
                    android:background="@color/primaryDarkColor"
                    android:visibility="gone"
                    app:layout_constraintBottom_toBottomOf="@+id/peek_row"
                    app:layout_constraintTop_toTopOf="parent">

                    <Button
                        android:id="@+id/peek_negative_button"
                        style="@style/Base.Widget.AppCompat.Button.Borderless"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_marginEnd="@dimen/margin_16dp"
                        android:textColor="@color/secondaryColor"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toStartOf="@+id/peek_positive_button"
                        app:layout_constraintTop_toTopOf="parent"
                        tools:text="Cancel" />

                    <Button
                        android:id="@+id/peek_positive_button"
                        style="@style/Base.Widget.AppCompat.Button.Borderless"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:textColor="@color/secondaryColor"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        tools:text="OK" />
                </android.support.constraint.ConstraintLayout>
            </LinearLayout>



        </android.support.constraint.ConstraintLayout>
    </android.support.v7.widget.CardView>
</android.support.design.widget.CoordinatorLayout>